relm-derive/tests/ui/widget-attribute/no-update-method.stderr
error: unexpected end of input, update method not found
 --> $DIR/no-update-method.rs:3:1
  |
3 | #[widget]
  | ^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
