relm-derive/tests/ui/widget-attribute/no-update-method.rs
use relm_derive::widget;

#[widget]
impl Widget for Foo {
    fn model() {}

    view! {
        gtk::Window {}
    }
}

fn main() {}
